trunk/Archive2/b2/b79ca30bbd1701/output
main.cpp: In function 'int compare(char*)':
main.cpp:3:10: error: 'everRun' was not declared in this scope
     if (!everRun)
          ^
main.cpp:5:3: error: 'bytes' was not declared in this scope
   bytes.insert(uint64_t(buffer[0]));
   ^
main.cpp:5:34: error: 'uint64_t' was not declared in this scope
   bytes.insert(uint64_t(buffer[0]));
                                  ^
main.cpp:10:17: error: 'bytes' was not declared in this scope
   auto search = bytes.find(uint64_t(buffer[i]));
                 ^
main.cpp:10:46: error: 'uint64_t' was not declared in this scope
   auto search = bytes.find(uint64_t(buffer[i]));
                                              ^
main.cpp:19:4: error: 'cout' was not declared in this scope
    cout << "New byte: " << uint64_t(buffer[i]) << "\n";
    ^
main.cpp:22:2: error: 'cout' was not declared in this scope
  cout << "The size of a random value in buffer before is " << uint64_t(buffer[5253]) << "\n"; //Proof that it's reading the same values.
  ^
main.cpp:22:84: error: 'uint64_t' was not declared in this scope
  cout << "The size of a random value in buffer before is " << uint64_t(buffer[5253]) << "\n"; //Proof that it's reading the same values.
                                                                                    ^
main.cpp:23:42: error: 'bytes' was not declared in this scope
  cout << "The size of the vector is " << bytes.size(); 
                                          ^
